added device plugin to deal with android platform differentiation | changed how voice recording behaves in android

--- a/native/package.json
+++ b/native/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "cordova-android": "^7.0.0",
         "cordova-ios": "^4.5.4",
+        "cordova-plugin-device": "^2.0.2",
         "cordova-plugin-file": "^6.0.1",
         "cordova-plugin-http": "^1.2.0",
         "cordova-plugin-speechrecognition": "^1.2.0",
@@ -21,7 +22,8 @@
         "plugins": {
             "cordova-plugin-whitelist": {},
             "cordova-plugin-speechrecognition": {},
-            "cordova-plugin-http": {}
+            "cordova-plugin-http": {},
+            "cordova-plugin-device": {}
         },
         "platforms": [
             "ios",
