--- a/native/package.json
+++ b/native/package.json
@@ -15,6 +15,7 @@
         "cordova-plugin-device": "^2.0.2",
         "cordova-plugin-file": "^6.0.1",
         "cordova-plugin-http": "^1.2.0",
+        "cordova-plugin-inappbrowser": "^3.0.0",
         "cordova-plugin-speechrecognition": "^1.2.0",
         "cordova-plugin-whitelist": "^1.3.3"
     },
@@ -23,7 +24,8 @@
             "cordova-plugin-whitelist": {},
             "cordova-plugin-speechrecognition": {},
             "cordova-plugin-http": {},
-            "cordova-plugin-device": {}
+            "cordova-plugin-device": {},
+            "cordova-plugin-inappbrowser": {}
         },
         "platforms": [
             "ios",
