--- a/native/package.json
+++ b/native/package.json
@@ -17,6 +17,7 @@
         "cordova-plugin-http": "^1.2.0",
         "cordova-plugin-inappbrowser": "^3.0.0",
         "cordova-plugin-speechrecognition": "^1.2.0",
+        "cordova-plugin-splashscreen": "^5.0.2",
         "cordova-plugin-whitelist": "^1.3.3"
     },
     "cordova": {
@@ -25,7 +26,8 @@
             "cordova-plugin-speechrecognition": {},
             "cordova-plugin-http": {},
             "cordova-plugin-device": {},
-            "cordova-plugin-inappbrowser": {}
+            "cordova-plugin-inappbrowser": {},
+            "cordova-plugin-splashscreen": {}
         },
         "platforms": [
             "ios",
