--- a/native/package.json
+++ b/native/package.json
@@ -10,7 +10,6 @@
     "author": "Apache Cordova Team",
     "license": "Apache-2.0",
     "dependencies": {
-        "cordova-android": "^7.0.0",
         "cordova-ios": "^4.5.4",
         "cordova-plugin-device": "^2.0.2",
         "cordova-plugin-file": "^6.0.1",
@@ -18,6 +17,7 @@
         "cordova-plugin-inappbrowser": "^3.0.0",
         "cordova-plugin-speechrecognition": "^1.2.0",
         "cordova-plugin-splashscreen": "^5.0.2",
+        "cordova-plugin-statusbar": "^2.4.2",
         "cordova-plugin-whitelist": "^1.3.3"
     },
     "cordova": {
@@ -27,11 +27,11 @@
             "cordova-plugin-http": {},
             "cordova-plugin-device": {},
             "cordova-plugin-inappbrowser": {},
-            "cordova-plugin-splashscreen": {}
+            "cordova-plugin-splashscreen": {},
+            "cordova-plugin-statusbar": {}
         },
         "platforms": [
-            "ios",
-            "android"
+            "ios"
         ]
     }
 }
