--- a/native/platforms/ios/Retain/Retain-Info.plist
+++ b/native/platforms/ios/Retain/Retain-Info.plist
@@ -13,7 +13,7 @@
     <key>CFBundleIcons~ipad</key>
     <dict/>
     <key>CFBundleIdentifier</key>
-    <string>com.3ee.retain</string>
+    <string>com.thirdeye.retain</string>
     <key>CFBundleInfoDictionaryVersion</key>
     <string>6.0</string>
     <key>CFBundleName</key>
